refactor: exception handler resource already exists